--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,9 @@ body {
   display: block;
   overflow: hidden;
 }
+.item:hover{
+  border-radius: 10px;
+}
 
 .items .icons {
   position: absolute;
@@ -381,6 +384,10 @@ body {
 .items .openButton {
   float: left;
   left: -250px;
+}
+.nav-item{
+  border-top: 1px solid #7FFF00;
+  border-radius: 15px;
 }
 
 .items .projectLink {
@@ -591,6 +598,9 @@ body {
     transform: scale(1);
     margin-left: 20px;
   }
+  .nav-item{
+  border-top: none;
+}
 }
 
 @keyframes fillBar {
@@ -612,30 +622,38 @@ body {
   transition: .4s;
   text-decoration: none;
 }
+.filter .current:hover{
+  border-radius: 10px;
+}
 
 .filter .filter-apps:hover {
   background-color: #3f51b5;
   color: white;
+  border-radius: 10px;
 }
 
 .filter .filter-eb:hover {
   background-color: #00897b;
   color: white;
+  border-radius: 10px;
 }
 
 .filter .filter-roms:hover {
   background-color: #ef6c00;
   color: white;
+  border-radius: 10px;
 }
 
 .filter .filter-websites:hover {
   background-color: #607d8b;
   color: white;
+  border-radius: 10px;
 }
 
 .filter .filter-other:hover {
   background-color: #00695f;
   color: white;
+  border-radius: 10px;
 }
 
 .heart {
@@ -669,7 +687,6 @@ body {
 #navigation {
   background-color: rgba(27,27,27,0.8);
 }
-
 .resumeButton {
   background-color: #009688;
 } */
